eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: crypto-api-service
spec:
  selector:
    app: crypto-app-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: http-server
      name: http-service
  type: ClusterIP
