eks/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-app-api-ingress-http
  annotations:  
    zalando.org/aws-load-balancer-type: nlb

spec:
  rules:
  - host: "api.freeeasycrypto.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crypto-api-service
            port:
              number: 80

  tls:
  - hosts:
    - api.freeeascrypto.com
    secretName: crypto-app-api-tls-secret
